[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/ThaleahFat.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://TitleScreen.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 150
outline_size = 3
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 65
outline_color = Color( 0.658824, 0.6, 0.517647, 1 )
font_data = ExtResource( 1 )

[sub_resource type="InputEventAction" id=3]
action = "ui_select"

[sub_resource type="ShortCut" id=4]
shortcut = SubResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 65
outline_color = Color( 0.658824, 0.6, 0.517647, 1 )
font_data = ExtResource( 1 )

[sub_resource type="InputEventAction" id=6]
action = "ui_cancel"

[sub_resource type="ShortCut" id=7]
shortcut = SubResource( 6 )

[sub_resource type="DynamicFont" id=8]
size = 20
outline_color = Color( 0.658824, 0.6, 0.517647, 1 )
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=9]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( -0.00610051, 0.49695 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.113725, 0.12549, 0.129412, 1 ), Color( 0.113725, 0.12549, 0.129412, 0 ) ]
}

[sub_resource type="Animation" id=10]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.113725, 0.12549, 0.129412, 0 ), Color( 0.113725, 0.12549, 0.129412, 1 ) ]
}

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.113725, 0.12549, 0.129412, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -320.0
margin_top = -150.0
margin_right = 320.0
margin_bottom = 31.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 640.0
margin_bottom = 138.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="T" type="Label" parent="VBoxContainer/TitleContainer"]
margin_left = 117.0
margin_right = 183.0
margin_bottom = 138.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.984314, 0.286275, 0.203922, 1 )
custom_colors/font_outline_modulate = Color( 0.8, 0.141176, 0.113725, 1 )
text = "T"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="E" type="Label" parent="VBoxContainer/TitleContainer"]
margin_left = 187.0
margin_right = 262.0
margin_bottom = 138.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.721569, 0.733333, 0.14902, 1 )
custom_colors/font_outline_modulate = Color( 0.596078, 0.592157, 0.101961, 1 )
text = "E"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="T2" type="Label" parent="VBoxContainer/TitleContainer"]
margin_left = 266.0
margin_right = 332.0
margin_bottom = 138.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.980392, 0.741176, 0.184314, 1 )
custom_colors/font_outline_modulate = Color( 0.843137, 0.6, 0.129412, 1 )
text = "T"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="R" type="Label" parent="VBoxContainer/TitleContainer"]
margin_left = 336.0
margin_right = 411.0
margin_bottom = 138.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.513726, 0.647059, 0.596078, 1 )
custom_colors/font_outline_modulate = Color( 0.270588, 0.521569, 0.533333, 1 )
text = "R"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="I" type="Label" parent="VBoxContainer/TitleContainer"]
margin_left = 415.0
margin_right = 443.0
margin_bottom = 138.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.827451, 0.52549, 0.607843, 1 )
custom_colors/font_outline_modulate = Color( 0.694118, 0.384314, 0.52549, 1 )
text = "I"
align = 3
valign = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="S" type="Label" parent="VBoxContainer/TitleContainer"]
margin_left = 447.0
margin_right = 522.0
margin_bottom = 138.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.556863, 0.752941, 0.462745, 1 )
custom_colors/font_outline_modulate = Color( 0.407843, 0.615686, 0.415686, 1 )
text = "M"
align = 3
valign = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 142.0
margin_right = 640.0
margin_bottom = 280.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Button" parent="VBoxContainer/MenuContainer"]
margin_right = 640.0
margin_bottom = 67.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_disabled = Color( 0.658824, 0.6, 0.517647, 1 )
custom_colors/font_color = Color( 0.921569, 0.858824, 0.698039, 1 )
custom_colors/font_color_hover = Color( 0.658824, 0.6, 0.517647, 1 )
custom_colors/font_color_pressed = Color( 0.741176, 0.682353, 0.576471, 1 )
shortcut = SubResource( 4 )
text = "PLAY"
flat = true

[node name="Quit" type="Button" parent="VBoxContainer/MenuContainer"]
margin_top = 71.0
margin_right = 640.0
margin_bottom = 138.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color_disabled = Color( 0.658824, 0.6, 0.517647, 1 )
custom_colors/font_color = Color( 0.921569, 0.858824, 0.698039, 1 )
custom_colors/font_color_hover = Color( 0.658824, 0.6, 0.517647, 1 )
custom_colors/font_color_pressed = Color( 0.741176, 0.682353, 0.576471, 1 )
shortcut = SubResource( 7 )
text = "QUIT"
flat = true

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -19.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="Label" parent="CenterContainer"]
margin_left = 169.0
margin_right = 471.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0.921569, 0.858824, 0.698039, 1 )
text = "Copyright 2020 - MICHELL STUTTGART"
align = 1
valign = 1

[node name="FadeBackground" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.113725, 0.12549, 0.129412, 0.987873 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="FadeBackground"]
anims/FadeIn = SubResource( 9 )
anims/FadeOut = SubResource( 10 )
[connection signal="pressed" from="VBoxContainer/MenuContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="VBoxContainer/MenuContainer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="animation_finished" from="FadeBackground/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
